fix(style): modal has overflow control

--- a/src/css/components/catalog.css
+++ b/src/css/components/catalog.css
@@ -15,6 +15,8 @@
   display: grid;
   grid-template-columns: repeat(5, minmax(130px, 1fr));
   grid-gap: 1rem;
+  max-height: 65vh;
+  overflow-y: auto;
 }
 .editor-catalog__item {
   background-color: #e9e9e9;
